Add authentication templates

--- a/QuestionTime/templates/django_registration/registration_form.html
+++ b/QuestionTime/templates/django_registration/registration_form.html
@@ -1,18 +1,18 @@
-<!-- Log in page -->
+<!-- Registration page -->
 
 {% extends "auth_layout.html" %}
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <h1>Log in</h1>
-    <div class="login-form-container">
+    <h1>Create an account</h1>
+    <div class="registration-form-container">
         <form method="post">
             {% csrf_token %}
             {{ form|crispy }}
             <button
                 type="submit"
                 class="btn btn-sm btn-outline-primary"
-                >Log in
+                >Register
             </button>
         </form>
     </div>
