--- a/QuestionTime/templates/auth_layout.html
+++ b/QuestionTime/templates/auth_layout.html
@@ -10,10 +10,22 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
           crossorigin="anonymous">
+
+    <style>
+      .login-form-container {
+        width: 300px;
+        margin: auto;
+      }
+
+      .registration-form-container {
+        width: 400px;
+        margin: auto;
+      }
+    </style>
   </head>
   <body>
     <!-- Dynamic content -->
-    <div class="auth-box">
+    <div class="auth-box text-center">
       {% block content %}
       {% endblock %}
     </div>
