--- a/QuestionTime/templates/django_registration/registration_form.html
+++ b/QuestionTime/templates/django_registration/registration_form.html
@@ -3,17 +3,19 @@
 {% extends "auth_layout.html" %}
 {% load crispy_forms_tags %}
 
-{% block content %}
-    <h1>Create an account</h1>
+{% block auth %}
+    <h2>Create an account</h2>
     <div class="registration-form-container">
-        <form method="post">
+        <form method="post" novalidate>
             {% csrf_token %}
             {{ form|crispy }}
             <button
                 type="submit"
-                class="btn btn-sm btn-outline-primary"
+                class="btn btn-primary btn-block"
                 >Register
             </button>
         </form>
+        <hr>
+        <a href="{% url 'login' %}" class="btn btn-outline-primary btn-block mt-2" >Log in</a>
     </div>
 {% endblock %}
