--- a/QuestionTime/templates/registration/login.html
+++ b/QuestionTime/templates/registration/login.html
@@ -3,17 +3,20 @@
 {% extends "auth_layout.html" %}
 {% load crispy_forms_tags %}
 
-{% block content %}
-    <h1>Log in</h1>
+{% block auth %}
+    <h1>QuestionTime</h1>
+    <p class="lead text-muted">Share your knowledge!</p>
     <div class="login-form-container">
-        <form method="post">
+        <form method="post" novalidate>
             {% csrf_token %}
             {{ form|crispy }}
             <button
                 type="submit"
-                class="btn btn-sm btn-outline-primary"
+                class="btn btn-primary btn-block"
                 >Log in
             </button>
         </form>
+        <hr>
+        <a href="{% url 'django_registration_register' %}" class="btn btn-outline-primary btn-block mt-2" >Create an account</a>
     </div>
 {% endblock %}
