--- a/QuestionTime/templates/base.html
+++ b/QuestionTime/templates/base.html
@@ -45,5 +45,8 @@
             integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
             crossorigin="anonymous">
     </script>
+
+    {% block script %}
+    {% endblock %}
   </body>
 </html>
